# msc-thesis-learning-priors

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  copy-daic-to-local.sh  pyproject.toml  requirements.txt
.github/.workflows/: ci.yaml
.github/workflows/: deployment.yml  main.yml
cached_datasets/: 1p28М-gp-hyperprior.pt
code/models/: train.py  transformer.py
notebooks/: experiments-gp-prior.ipynb
notes/: Agenda & Notes - 11th December, 2025.md  Agenda & Notes - 16th January, 2026.md  Agenda & Notes - 20th November, 2025.md  Agenda & Notes - 22nd December.md  Agenda & Notes - 27th November, 2025.md  Kickoff Meeting.md  agenda-13-11-2025.md
presentations/: presentation-11-12-2025.tex  presentation-16-01-2026.tex  presentation-27-11-2025.tex
slurm_scripts/: ml-script.sh
src/: load_config.py  train.py  training_script.py  training_util.py
src/configs/: one_epoch_prior_learning.yaml  one_epoch_vanilla_pfn.yaml  prior_learning_pfn.yaml  vanilla_pfn.yaml
src/criterion/: bar_distribution.py
src/model_evaluation/: evaluate_with_context.py
src/models/: encoders.py  positional_encodings.py  prior_transformer.py  transformer.py
src/pfn_prior_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prior_generation/: bayesian_linear_regression_hyperprior.py  gp_lengthscale_prior.py  gp_prior.py  prior_dataloader.py  prior_generator.py
src/samplers/: distribution_samplers.py  distributions.py
src/util/: util.py
src/visualization/: datasets_visualization.py  training_plots.py  (+1 more)
tests/: dummy_test.py  test_training_util.py
(+1 files in other folders)
